--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,43 @@
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
 asgiref==3.8.1
+attrs==25.1.0
+certifi==2025.1.31
+deprecation==2.1.0
 Django==4.2.19
 django-bootstrap5==24.3
+frozenlist==1.5.0
+gotrue==2.11.3
 gunicorn==23.0.0
+h11==0.14.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.7
+httpx==0.28.1
+hyperframe==6.1.0
+idna==3.10
+multidict==6.1.0
 packaging==24.2
+postgrest==0.19.3
+propcache==0.2.1
+psycopg2==2.9.10
+psycopg2-binary==2.9.10
+pydantic==2.10.6
+pydantic_core==2.27.2
+python-dateutil==2.9.0.post0
+realtime==2.3.0
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+storage3==0.11.3
+StrEnum==0.4.15
+supabase==2.13.0
+supafunc==0.9.3
 typing_extensions==4.12.2
 tzdata==2025.1
+websockets==14.2
 whitenoise==6.7.0
+yarl==1.18.3
